[tool.poetry]
name = "paper_screener"
version = "0.1.0"
description = "Screen PubMed papers for non-academic authors from pharma/biotech companies."
authors = ["Simar Katyal <simarkatyal17@gmail.com>"]
packages = [{ include = "paper_screener" }]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pandas = "^2.2.1"
typer = "^0.12.3"

[tool.poetry.scripts]
get-papers-list = "paper_screener.cli:get_papers_list"